--- a/my project/index.html
+++ b/my project/index.html
@@ -119,10 +119,17 @@
         alt="Your Photo"
         id="trigger"
       />
+      <img
+        src="https://cdn.motor1.com/images/mgl/W8oJZg/s3/2024-audi-rs6-avant-performance-pricing.jpg"
+        alt=""
+        class="my-imagee"
+      />
     </div>
 
     <div id="description">
       <p>Lamborghini's Revuelto Is Its New Hybrid |</p>
+      <p>price:200 million</p>
+      <p>categories</p>
     </div>
 
     <script src="js.js"></script>
